# WaLSAlib

./: .gitignore  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
examples/LineFit_Frontiers/: Figure1.ipynb  Figure2.ipynb  Figure3.ipynb  Figure4.ipynb  Figure5.ipynb  Figures_S1.ipynb  Figures_S1_S2.ipynb  Figures_S2_S3.ipynb  Generate_synthetic_data.ipynb  PoP_CNN_emulator.ipynb  README.md  synthetic_data.ipynb  synthetic_nuv_testbed.fits
examples/LineFit_Frontiers/Files/: extracted_parameters_date_id_pixel_0.csv  fitted_spectra_date_id_pixel_0.fits
examples/LineFit_Frontiers/Files/Fig3_cache/: fig3_vtimeseries__lambda0_nm.npy  fig3_vtimeseries__t_s.npy  fig3_vtimeseries__v_cog.npy  fig3_vtimeseries__v_fft.npy  fig3_vtimeseries__v_linefit.npy  fig3_vtimeseries__v_parab.npy  v_linefit.npy
examples/LineFit_Frontiers/Files/Fig4_cache/: fig4_vtimeseries__meta.npz  fig4_vtimeseries__v_poly.npy  fig4_vtimeseries__v_true.npy  fig4_waveletGWS_multiline__line3__P_cog.npy  fig4_waveletGWS_multiline__line3__P_fft.npy  fig4_waveletGWS_multiline__line3__P_parab.npy  fig4_waveletGWS_multiline__line3__P_poly.npy  fig4_waveletGWS_multiline__line3__P_truth.npy  fig4_waveletGWS_multiline__line3__R_linefit.npy  fig4_waveletGWS_multiline__line3__R_poly.npy  fig4_waveletGWS_multiline__line3__meta.npz  fig4_waveletGWS_multiline__line5__P_fft.npy  fig4_waveletGWS_multiline__line5__P_parab.npy  fig4_waveletGWS_multiline__line5__P_poly.npy  fig4_waveletGWS_multiline__line5__P_truth.npy  fig4_waveletGWS_multiline__line5__R_cog.npy  fig4_waveletGWS_multiline__line5__R_linefit.npy  fig4_waveletGWS_multiline__line5__f_mhz.npy  fig4_waveletGWS_multiline__line5__meta.npz  fig4_waveletGWS_multiline__line5__periods_s.npy
examples/LineFit_Frontiers/Files/PoP_CNN_emulator_outputs/: cnn_model.pt  (+6 more)
src/WaLSAlib/: __init__.py
src/WaLSAlib/linefit/: WaLSA_LineFit.py
src/walsa_pipelines/: __init__.py
src/walsa_pipelines/linefit/: WaLSA_LineFit.py  __init__.py
(+9 files in other folders)
