[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WaLSA-pipelines"
version = "0.1.0"
description = "WaLSA-Pipelines: workflow tools to prepare analysis-ready signals for wave/oscillation studies."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "WaLSA Team", email = "Shahin.Jafarzadeh@WaLSA.team"}
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8"
]

[project.urls]
Homepage = "https://github.com/WaLSAteam/WaLSA-Pipelines"
Repository = "https://github.com/WaLSAteam/WaLSA-Pipelines"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
