[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walsa-pipelines"
version = "0.1.0"
description = "WaLSA-Pipelines: pipeline/auxiliary routines complementing WaLSAtools."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = []

[project.urls]
Repository = "https://github.com/WaLSAteam/WaLSA-Pipelines"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]