[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WaLSAlib"
version = "0.1.0"
description = "WaLSA community library: auxiliary routines complementing WaLSAtools."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
  "numpy",
  "scipy",
  "astropy",
  "matplotlib",
  "WaLSAtools",
]

[project.urls]
Repository = "https://github.com/WaLSAteam/WaLSAlib"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["WaLSAlib*"]